tests/toylang/neg/000926_mutation.toylang
program a = { if a do then sleep; } .
